Remover: TestFactory, because it useless for this task

--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <parallel>methods</parallel>
+                    <parallel>all</parallel>
                     <threadCount>4</threadCount>
                     <forkMode>perthread</forkMode>
                 </configuration>
